# agent-notes

./: .env  .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
.claude/skills/: agentnotes.md
.github/workflows/: publish.yml
docs/: WHY_GIT_NOTES.md
docs/assets/: log_sample.txt  show_sample.txt
implementation_plans/: 001-cli-interface.md
src/agent_notes/: dx.py  main.py  mcp.py
src/agent_notes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py
